<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PlainTextRegistrate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:padding="16dp">

...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextRegisterUsername"
                android:layout_width="349dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="username"
...
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoFruticionRegistro" />

            <EditText
                android:id="@+id/editTextRegisterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="@string/text_login_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextRegisterUsername"
                app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterUsername" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="@string/text_join_check_pass"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextRegisterPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextRegisterPassword"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterPassword" />

            <Button
                android:id="@+id/buttonRegister"
                style="@style/button_text"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
...
