<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity">

    <TextView
        android:id="@+id/editarPerfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="Titulo de la pantalla Editar perfil"
        android:ems="10"
        android:text="@string/title_edit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editNameTextView"
        android:layout_width="303dp"
        android:layout_height="49dp"
        android:layout_marginTop="84dp"
        android:text="@string/value_edit_username"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editarPerfilTextView" />

    <EditText
        android:id="@+id/newUsernameEditText"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Barra para insertar el nuevo nombre de usuario"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editNameTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/editNameTextView" />

    <TextView
        android:id="@+id/newPasswordTextView"
        android:layout_width="310dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:text="@string/text_edit_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUsernameEditText" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="305dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Campo para introducir la nueva contraseña"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/newPasswordTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newPasswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordTextView" />

    <Button
        android:id="@+id/button_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/save_edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText" />

    <Button
        android:id="@+id/button_cancel_changes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/cancel_edit_button"
        app:layout_constraintEnd_toEndOf="@+id/button_save_changes"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/button_save_changes"
        app:layout_constraintTop_toBottomOf="@+id/button_save_changes" />

</androidx.constraintlayout.widget.ConstraintLayout>