...
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2"
                app:srcCompat="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="username"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="@string/text_login_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toStartOf="@+id/pass_visibility_button"
                app:layout_constraintStart_toStartOf="@+id/editTextUsername"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

            <Button
                android:id="@+id/buttonLogin"
                style="@style/button_text"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/shape_formato_botones_app"
                android:text="@string/button_login_login"
...
